syntax = "proto3";
package spire.plugin.agent.workloadattestor.v1;
option go_package = "github.com/spiffe/spire-plugin-sdk/proto/spire/plugin/agent/workloadattestor/v1";

message AttestRequest {
    // Required. The process ID of the workload to attest.
    int32 pid = 1;
}

message AttestResponse {
    // Optional. Selector values related to the attested workload. The type
    // of the selector is inferred from the plugin name.
    repeated string selector_values = 1;
}

service WorkloadAttestor {
    // Attests the specified workload process. If the process is not attestable
    // (i.e. not a process the attestor knows anything about), INVALID_ARGUMENT
    // is returned. Otherwise the attestor returns zero or more
    // selector values, or another status if there is an error attesting the
    // workload.
    rpc Attest(AttestRequest) returns (AttestResponse);
}
